--- a/front/src/app/pages/index/index.component.html
+++ b/front/src/app/pages/index/index.component.html
@@ -4,7 +4,7 @@
 	<section id="banner" class="major">
 		<div class="inner">
 			<header class="major">
-				<h1>E-Make</h1>
+				<h1 class="text-center">E-Make</h1>
 			</header>
 			<div class="content">
 				<!--<p>A responsive site template designed by HTML5 UP<br />and released under the Creative Commons.</p>-->
