--- a/front/src/app/pages/shop/shop.component.html
+++ b/front/src/app/pages/shop/shop.component.html
@@ -8,7 +8,7 @@
 				<img src="assets/images/pic07.jpg" alt="" />
 			</span>
 			<header class="major">
-				<h1>Shop</h1>
+				<h1 class="text-center">Shop</h1>
 			</header>
 			<div class="content">
 				<p>This is the Shop !</p>
@@ -20,7 +20,7 @@
 	<section id="one">
 		<div class="inner">
 			<header class="major">
-				<h2>Pi Modules/Assembly</h2>
+				<h2 class="text-center">Pi Modules/Assembly</h2>
 			</header>
 			<p>PiModules</p>
 		</div>
@@ -35,7 +35,7 @@
 	<section id="three">
 		<div class="inner">
 			<header class="major">
-				<h2>Accessories</h2>
+				<h2 class="text-center">Accessories</h2>
 			</header>
 			<p>Accessories *Category Separation*</p>
 		</div>
