--- a/front/src/app/pages/order-form/order-form.component.html
+++ b/front/src/app/pages/order-form/order-form.component.html
@@ -33,8 +33,8 @@
 			<div [class]="'row gtr-uniform' + (isSync ? ' sync' : '')" id="order-infos">
 				<div class="col-6 col-12-xsmall">
 					<header class="major">
-						<h2 class="text-center">Billing infos</h2>
-
+						<h2 class="text-center"><i class="fas fa-clipboard-list"></i> Billing infos</h2>
+						
 						<span *ngIf="isSync" id="sync-marker"><i class="fas fa-arrow-circle-right"></i></span>
 					</header>
 					
@@ -71,7 +71,7 @@
 				</div>
 				<div class="col-6 col-12-xsmall">
 					<header class="major">
-						<h2 class="text-center">Shipping infos</h2>
+						<h2 class="text-center"><i class="fas fa-box-open"></i> Shipping infos</h2>
 					</header>
 					
 					<div class="row gtr-uniform">
@@ -106,6 +106,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+	
+	<section id="three">
+		<div class="inner">
+			<button class="button primary fit" [disabled]="!formBilling.valid || !formShipping.valid"><i class="fas fa-cubes"></i> Ask for a quote</button>
 		</div>
 	</section>
 </form>
